Integration de Liquibase, et correction de la migrations --> SQL