@@ -1,247 +1,268 @@
 package com.yowyob.erp.accounting.service;
 
-import com.yowyob.erp.accounting.dto.JournalComptableDto;
 import com.yowyob.erp.accounting.dto.EcritureComptableDto;
+import com.yowyob.erp.accounting.dto.JournalComptableDto;
+import com.yowyob.erp.accounting.entity.EcritureComptable;
 import com.yowyob.erp.accounting.entity.JournalAudit;
 import com.yowyob.erp.accounting.entity.JournalComptable;
-import com.yowyob.erp.accounting.entity.EcritureComptable;
-import com.yowyob.erp.accounting.entityKey.JournalAuditKey;
-import com.yowyob.erp.accounting.entityKey.JournalComptableKey;
+import com.yowyob.erp.accounting.entity.Tenant;
+import com.yowyob.erp.accounting.repository.EcritureComptableRepository;
 import com.yowyob.erp.accounting.repository.JournalAuditRepository;
 import com.yowyob.erp.accounting.repository.JournalComptableRepository;
-import com.yowyob.erp.accounting.repository.EcritureComptableRepository;
 import com.yowyob.erp.common.constants.AppConstants;
+import com.yowyob.erp.common.exception.ResourceNotFoundException;
+import com.yowyob.erp.config.kafka.KafkaMessageService;
+import com.yowyob.erp.config.redis.RedisService;
 import com.yowyob.erp.config.tenant.TenantContext;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Validator;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.kafka.core.KafkaTemplate;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
+/**
+ * Service for managing accounting journals.
+ * Compatible with PostgreSQL + Redis + Kafka + Multi-tenant.
+ *
+ * @author ALD
+ * @date 12/10/2025 06:04 PM WAT
+ */
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class JournalComptableService {
 
-    private static final Logger logger = LoggerFactory.getLogger(JournalComptableService.class);
     private final JournalComptableRepository journalComptableRepository;
     private final EcritureComptableRepository ecritureComptableRepository;
     private final JournalAuditRepository journalAuditRepository;
     private final Validator validator;
-    private final KafkaTemplate<String, Object> kafkaTemplate;
+    private final KafkaMessageService kafkaMessageService;
+    private final RedisService redisService;
 
-    public JournalComptableService(
-        JournalComptableRepository journalComptableRepository, 
-       JournalAuditRepository journalAuditRepository, 
-       EcritureComptableRepository ecritureComptableRepository,
-       Validator validator, 
-       KafkaTemplate<String, Object> kafkaTemplate) {
-        this.journalComptableRepository = journalComptableRepository;
-        this.journalAuditRepository = journalAuditRepository;
-        this.ecritureComptableRepository = ecritureComptableRepository;
-        this.validator = validator;
-        this.kafkaTemplate = kafkaTemplate;
-    }
+    private static final String CACHE_JOURNAL_ALL = "journal:all:";
+    private static final String CACHE_JOURNAL_ACTIVE = "journal:active:";
 
+    /* -------------------------------------------------------------------------
+     *  CREATION
+     * ---------------------------------------------------------------------- */
     @Transactional
-    public JournalComptableDto createJournalComptable(JournalComptableDto journalComptableDto) {
-        logger.info("Création d'un journal comptable");
-        validerJournalComptableDto(journalComptableDto);
+    public JournalComptableDto createJournalComptable(JournalComptableDto dto) {
         UUID tenantId = TenantContext.getCurrentTenant();
-        String currentUser = TenantContext.getCurrentUser();
+        String user = Optional.ofNullable(TenantContext.getCurrentUser()).orElse("system");
+        log.info("📓 Creating accounting journal [{}] for tenant {}", dto.getCodeJournal(), tenantId);
 
-        if (journalComptableRepository.existsByKeyTenantIdAndCodeJournal(tenantId, journalComptableDto.getCodeJournal())) {
-            throw new IllegalArgumentException("Code journal déjà utilisé : " + journalComptableDto.getCodeJournal());
+        validateJournalComptableDto(dto);
+
+        if (journalComptableRepository.existsByTenant_IdAndCodeJournal(tenantId, dto.getCodeJournal())) {
+            throw new IllegalArgumentException("Journal code already in use: " + dto.getCodeJournal());
         }
 
-        // Map DTO to entity
-        JournalComptable journalComptable = mapToEntity(journalComptableDto, tenantId);
-        JournalComptableKey key = new JournalComptableKey();
-        key.setTenantId(tenantId);
-        key.setId(UUID.randomUUID());
-        journalComptable.setKey(key);
-        journalComptable.setCreatedAt(LocalDateTime.now());
-        journalComptable.setUpdatedAt(LocalDateTime.now());
-        journalComptable.setCreatedBy(currentUser != null ? currentUser : "system");
-        journalComptable.setUpdatedBy(currentUser != null ? currentUser : "system");
+        Tenant tenant = TenantContext.getCurrentTenantAsTenant();
+        JournalComptable entity = mapToEntity(dto, tenant);
+        entity.setId(UUID.randomUUID());
+        entity.setCreatedAt(LocalDateTime.now());
+        entity.setUpdatedAt(LocalDateTime.now());
+        entity.setCreatedBy(user);
+        entity.setUpdatedBy(user);
 
-        JournalComptable savedJournalComptable = journalComptableRepository.save(journalComptable);
-        logAudit(tenantId, null, currentUser, "CREATE", "Created journal: " + journalComptableDto.getCodeJournal());
-        kafkaTemplate.send("journal.comptable.created", tenantId.toString(), savedJournalComptable);
-        logger.info("Journal comptable créé avec succès : {}", savedJournalComptable.getKey().getId());
-        return mapToDto(savedJournalComptable);
+        JournalComptable saved = journalComptableRepository.save(entity);
+        logAudit(tenant, user, "CREATE", "Creation of journal " + dto.getCodeJournal());
+        kafkaMessageService.sendAuditLog(saved, tenantId.toString(), "JOURNAL_CREATED");
+
+        redisService.delete(CACHE_JOURNAL_ALL + tenantId);
+        redisService.delete(CACHE_JOURNAL_ACTIVE + tenantId);
+
+        return mapToDto(saved);
     }
 
-    public JournalComptableDto getJournalComptable(UUID journalComptableId) {
-        logger.info("Récupération du journal comptable avec l'ID : {}", journalComptableId);
-        validerAccesTenantId();
+    /* -------------------------------------------------------------------------
+     *  READ
+     * ---------------------------------------------------------------------- */
+    public Optional<JournalComptableDto> getJournalComptable(UUID journalId) {
         UUID tenantId = TenantContext.getCurrentTenant();
-        return journalComptableRepository.findByKeyTenantIdAndKeyId(tenantId, journalComptableId)
+        log.info("🔍 Retrieving accounting journal [{}] for tenant {}", journalId, tenantId);
+
+        return journalComptableRepository.findByTenant_IdAndId(tenantId, journalId)
                 .map(journal -> {
                     JournalComptableDto dto = mapToDto(journal);
-                    // Fetch and map all associated EcritureComptable entries
-                    List<EcritureComptableDto> ecritures = ecritureComptableRepository.findByKeyTenantIdAndJournalComptableId(tenantId, journalComptableId)
+                    List<EcritureComptableDto> ecritures = ecritureComptableRepository
+                            .findByTenant_IdAndJournal_Id(tenantId, journalId)
                             .stream()
-                            .map(this::mapEcritureToDto) 
+                            .map(this::mapEcritureToDto)
                             .collect(Collectors.toList());
                     dto.setEcritureComptable(ecritures);
                     return dto;
                 });
     }
-        
-
-        
 
     public List<JournalComptableDto> getAllJournalComptables() {
-        logger.info("Récupération de tous les journals comptables pour le tenant");
-        validerAccesTenantId();
-        return journalComptableRepository.findByKeyTenantId(TenantContext.getCurrentTenant())
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        UUID tenantId = TenantContext.getCurrentTenant();
+        log.info("📚 Retrieving all journals for tenant {}", tenantId);
+
+        String cacheKey = CACHE_JOURNAL_ALL + tenantId;
+        List<JournalComptableDto> cached = redisService.get(cacheKey, List.class);
+        if (cached != null) return cached;
+
+        List<JournalComptableDto> journals = journalComptableRepository.findByTenant_Id(tenantId)
+                .stream().map(this::mapToDto).toList();
+
+        redisService.save(cacheKey, journals, Duration.ofMinutes(10));
+        return journals;
     }
 
     public List<JournalComptableDto> getActiveJournalComptables() {
-        logger.info("Récupération des journals comptables actifs pour le tenant");
-        validerAccesTenantId();
-        return journalComptableRepository.findByKeyTenantIdAndActifTrue(TenantContext.getCurrentTenant())
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
-    }
-
-    @Transactional
-    public JournalComptableDto updateJournalComptable(UUID journalComptableId, JournalComptableDto updatedJournalComptableDto) {
-        logger.info("Mise à jour du journal comptable avec l'ID : {}", journalComptableId);
-        validerAccesTenantId();
         UUID tenantId = TenantContext.getCurrentTenant();
-        String currentUser = TenantContext.getCurrentUser();
-        if (!journalComptableRepository.existsByKeyTenantIdAndKeyId(tenantId, journalComptableId)) {
-            throw new IllegalArgumentException("L'ID du journal comptable n'existe pas : " + journalComptableId);
-        }
+        log.info("📘 Retrieving active journals for tenant {}", tenantId);
 
-        // Map DTO to entity
-        JournalComptable updatedJournalComptable = mapToEntity(updatedJournalComptableDto, tenantId);
-        updatedJournalComptable.setKey(new JournalComptableKey(tenantId, journalComptableId));
-        validerJournalComptableDto(updatedJournalComptableDto);
-        updatedJournalComptable.setUpdatedAt(LocalDateTime.now());
-        updatedJournalComptable.setUpdatedBy(currentUser != null ? currentUser : "system");
+        String cacheKey = CACHE_JOURNAL_ACTIVE + tenantId;
+        List<JournalComptableDto> cached = redisService.get(cacheKey, List.class);
+        if (cached != null) return cached;
 
-        JournalComptable savedJournalComptable = journalComptableRepository.save(updatedJournalComptable);
-        logAudit(tenantId, null, currentUser, "UPDATE", "Updated journal: " + updatedJournalComptableDto.getCodeJournal());
-        kafkaTemplate.send("journal.comptable.updated", tenantId.toString(), savedJournalComptable);
-        logger.info("Journal comptable mis à jour avec succès : {}", journalComptableId);
-        return mapToDto(savedJournalComptable);
+        List<JournalComptableDto> journals = journalComptableRepository.findByTenant_IdAndActifTrue(tenantId)
+                .stream().map(this::mapToDto).toList();
+
+        redisService.save(cacheKey, journals, Duration.ofMinutes(10));
+        return journals;
     }
 
+    /* -------------------------------------------------------------------------
+     *  UPDATE
+     * ---------------------------------------------------------------------- */
     @Transactional
-    public void deleteJournalComptable(UUID journalComptableId) {
-        logger.info("Suppression du journal comptable avec l'ID : {}", journalComptableId);
-        validerAccesTenantId();
+    public JournalComptableDto updateJournalComptable(UUID id, JournalComptableDto dto) {
         UUID tenantId = TenantContext.getCurrentTenant();
-        String currentUser = TenantContext.getCurrentUser();
-        JournalComptableKey key = new JournalComptableKey(tenantId, journalComptableId);
-        if (!journalComptableRepository.existsByKeyTenantIdAndKeyId(tenantId, journalComptableId)) {
-            throw new IllegalArgumentException("L'ID du journal comptable n'existe pas : " + journalComptableId);
-        }
-        journalComptableRepository.deleteById(key);
-        logAudit(tenantId, null, currentUser, "DELETE", "Deleted journal ID: " + journalComptableId);
-        kafkaTemplate.send("journal.comptable.deleted", tenantId.toString(), journalComptableId);
-        logger.info("Journal comptable supprimé avec succès : {}", journalComptableId);
+        String user = Optional.ofNullable(TenantContext.getCurrentUser()).orElse("system");
+
+        JournalComptable existing = journalComptableRepository.findByTenant_IdAndId(tenantId, id)
+                .orElseThrow(() -> new ResourceNotFoundException("JournalComptable", id.toString()));
+
+        validateJournalComptableDto(dto);
+
+        existing.setCodeJournal(dto.getCodeJournal());
+        existing.setLibelle(dto.getLibelle());
+        existing.setTypeJournal(dto.getTypeJournal());
+        existing.setNotes(dto.getNotes());
+        existing.setActif(dto.getActif());
+        existing.setUpdatedBy(user);
+        existing.setUpdatedAt(LocalDateTime.now());
+
+        JournalComptable saved = journalComptableRepository.save(existing);
+        logAudit(TenantContext.getCurrentTenantAsTenant(), user, "UPDATE", "Update of journal " + dto.getCodeJournal());
+        kafkaMessageService.sendAuditLog(saved, tenantId.toString(), "JOURNAL_UPDATED");
+
+        redisService.delete(CACHE_JOURNAL_ALL + tenantId);
+        redisService.delete(CACHE_JOURNAL_ACTIVE + tenantId);
+
+        return mapToDto(saved);
     }
 
-    private void validerJournalComptableDto(JournalComptableDto journalComptableDto) {
-        var violations = validator.validate(journalComptableDto);
-        if (!violations.isEmpty()) {
-            throw new ConstraintViolationException(violations);
+    /* -------------------------------------------------------------------------
+     *  DELETION
+     * ---------------------------------------------------------------------- */
+    @Transactional
+    public void deleteJournalComptable(UUID id) {
+        UUID tenantId = TenantContext.getCurrentTenant();
+        String user = Optional.ofNullable(TenantContext.getCurrentUser()).orElse("system");
+
+        JournalComptable journal = journalComptableRepository.findByTenant_IdAndId(tenantId, id)
+                .orElseThrow(() -> new ResourceNotFoundException("JournalComptable", id.toString()));
+
+        journalComptableRepository.delete(journal);
+        logAudit(TenantContext.getCurrentTenantAsTenant(), user, "DELETE", "Deletion of journal " + journal.getCodeJournal());
+        kafkaMessageService.sendAuditLog(journal, tenantId.toString(), "JOURNAL_DELETED");
+
+        redisService.delete(CACHE_JOURNAL_ALL + tenantId);
+        redisService.delete(CACHE_JOURNAL_ACTIVE + tenantId);
+    }
+
+    /* -------------------------------------------------------------------------
+     *  VALIDATION
+     * ---------------------------------------------------------------------- */
+    private void validateJournalComptableDto(JournalComptableDto dto) {
+        var violations = validator.validate(dto);
+        if (!violations.isEmpty()) throw new ConstraintViolationException(violations);
+
+        if (!dto.getCodeJournal().matches("^[A-Z]{1,5}$")) {
+            throw new IllegalArgumentException("Invalid journal code: must contain 1 to 5 uppercase letters.");
         }
-        String codeJournal = journalComptableDto.getCodeJournal();
-        if (!codeJournal.matches("^[A-Z]{1,5}$")) {
-            throw new IllegalArgumentException("Code journal invalide, doit être 1-5 lettres majuscules : " + codeJournal);
-        }
-        // Validate journal type against AppConstants
-        if (!AppConstants.JournalTypes.SALES.equals(journalComptableDto.getTypeJournal()) &&
-            !AppConstants.JournalTypes.PURCHASES.equals(journalComptableDto.getTypeJournal()) &&
-            !AppConstants.JournalTypes.CASH.equals(journalComptableDto.getTypeJournal()) &&
-            !AppConstants.JournalTypes.BANK.equals(journalComptableDto.getTypeJournal()) &&
-            !AppConstants.JournalTypes.GENERAL.equals(journalComptableDto.getTypeJournal())) {
-            throw new IllegalArgumentException("Type de journal invalide : " + journalComptableDto.getTypeJournal());
+
+        List<String> validTypes = List.of(
+                AppConstants.JournalTypes.SALES,
+                AppConstants.JournalTypes.PURCHASES,
+                AppConstants.JournalTypes.CASH,
+                AppConstants.JournalTypes.BANK,
+                AppConstants.JournalTypes.GENERAL
+        );
+
+        if (!validTypes.contains(dto.getTypeJournal())) {
+            throw new IllegalArgumentException("Invalid journal type: " + dto.getTypeJournal());
         }
     }
 
-    private void validerAccesTenantId() {
-        UUID currentTenantId = TenantContext.getCurrentTenant();
-        if (currentTenantId == null) {
-            throw new SecurityException("Accès refusé : ID du tenant non correspondant");
-        }
-    }
-
-    private void logAudit(UUID tenantId, UUID ecritureComptableId, String utilisateur, String action, String details) {
+    /* -------------------------------------------------------------------------
+     *  LOG + MAPPING
+     * ---------------------------------------------------------------------- */
+    private void logAudit(Tenant tenant, String utilisateur, String action, String details) {
         JournalAudit audit = new JournalAudit();
-        JournalAuditKey auditKey = new JournalAuditKey();
-        auditKey.setTenantId(tenantId);
-        auditKey.setId(UUID.randomUUID());
-        audit.setKey(auditKey);
-        audit.setEcritureComptableId(ecritureComptableId);
-        audit.setUtilisateur(utilisateur != null ? utilisateur : "system");
+        audit.setId(UUID.randomUUID());
+        audit.setTenant(tenant);
         audit.setAction(action);
+        audit.setUtilisateur(utilisateur);
         audit.setDetails(details);
         audit.setDateAction(LocalDateTime.now());
         journalAuditRepository.save(audit);
-        kafkaTemplate.send("journal.audit.created", tenantId.toString(), audit);
+        kafkaMessageService.sendAuditLog(audit, tenant.getId().toString(), action);
     }
 
-    private JournalComptable mapToEntity(JournalComptableDto dto, UUID tenantId) {
-        JournalComptable journal = new JournalComptable();
-        journal.setKey(new JournalComptableKey(tenantId, dto.getId() != null ? dto.getId() : UUID.randomUUID()));
-        journal.setCodeJournal(dto.getCodeJournal());
-        journal.setLibelle(dto.getLibelle());
-        journal.setTypeJournal(dto.getTypeJournal());
-        journal.setNotes(dto.getNotes());
-        journal.setActif(dto.getActif() != null ? dto.getActif() : true);
-        journal.setCreatedAt(dto.getCreatedAt() != null ? dto.getCreatedAt() : LocalDateTime.now());
-        journal.setUpdatedAt(dto.getUpdatedAt() != null ? dto.getUpdatedAt() : LocalDateTime.now());
-        return journal;
+    private JournalComptable mapToEntity(JournalComptableDto dto, Tenant tenant) {
+        JournalComptable j = new JournalComptable();
+        j.setTenant(tenant);
+        j.setCodeJournal(dto.getCodeJournal());
+        j.setLibelle(dto.getLibelle());
+        j.setTypeJournal(dto.getTypeJournal());
+        j.setNotes(dto.getNotes());
+        j.setActif(dto.getActif() != null ? dto.getActif() : true);
+        j.setCreatedAt(dto.getCreatedAt() != null ? dto.getCreatedAt() : LocalDateTime.now());
+        j.setUpdatedAt(dto.getUpdatedAt() != null ? dto.getUpdatedAt() : LocalDateTime.now());
+        return j;
     }
 
-    private JournalComptableDto mapToDto(JournalComptable journal) {
+    private JournalComptableDto mapToDto(JournalComptable entity) {
         return JournalComptableDto.builder()
-                .id(journal.getKey().getId())
-                .codeJournal(journal.getCodeJournal())
-                .libelle(journal.getLibelle())
-                .typeJournal(journal.getTypeJournal())
-                .notes(journal.getNotes())
-                .actif(journal.getActif())
-                .createdAt(journal.getCreatedAt())
-                .updatedAt(journal.getUpdatedAt())
+                .id(entity.getId())
+                .codeJournal(entity.getCodeJournal())
+                .libelle(entity.getLibelle())
+                .typeJournal(entity.getTypeJournal())
+                .notes(entity.getNotes())
+                .actif(entity.getActif())
+                .createdAt(entity.getCreatedAt())
+                .updatedAt(entity.getUpdatedAt())
                 .build();
     }
 
-  
-    private EcritureComptableDto mapEcritureToDto(EcritureComptable ecriture) {
-      
+    private EcritureComptableDto mapEcritureToDto(EcritureComptable e) {
         return EcritureComptableDto.builder()
-                .id(ecriture.getKey().getId())
-                .numeroEcriture(ecriture.getNumeroEcriture())
-                .libelle(ecriture.getLibelle())
-                .dateEcriture(ecriture.getDateEcriture())
-                .journalComptableId(ecriture.getJournalComptableId())
-                .periodeComptableId(ecriture.getPeriodeComptableId())
-                .montantTotalDebit(ecriture.getMontantTotalDebit())
-                .montantTotalCredit(ecriture.getMontantTotalCredit())
-                .validee(ecriture.getValidee())
-                .dateValidation(ecriture.getDateValidation())
-                .utilisateurValidation(ecriture.getUtilisateurValidation())
-                .referenceExterne(ecriture.getReferenceExterne())
-                .notes(ecriture.getNotes())
-                .createdAt(ecriture.getCreatedAt())
-                .updatedAt(ecriture.getUpdatedAt())
+                .id(e.getId())
+                .numeroEcriture(e.getNumeroEcriture())
+                .libelle(e.getLibelle())
+                .dateEcriture(e.getDateEcriture())
+                .journalComptableId(e.getJournal() != null ? e.getJournal().getId() : null)
+                .periodeComptableId(e.getPeriode().getId())
+                .montantTotalDebit(e.getMontantTotalDebit())
+                .montantTotalCredit(e.getMontantTotalCredit())
+                .validee(e.getValidee())
+                .dateValidation(e.getDateValidation())
+                .validatedBy(e.getValidatedBy()) // Corrected from utilisateurValidation
+                .referenceExterne(e.getReferenceExterne())
+                .notes(e.getNotes())
+                .createdAt(e.getCreatedAt())
+                .updatedAt(e.getUpdatedAt())
                 .build();
     }
 }
